# TensorImmune

./: .gitignore  README.md  pyproject.toml  tensorimmune_model.tflite
examples/: example_tflite_conversion.py
src/tensorimmune/: __init__.py  autoencoder.py  calibration.py  model.py  shape_utils.py
src/tensorimmune.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
