[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorimmune"
version = "0.1.2"
description = "A lightweight Keras wrapper that injects Out-of-Distribution detection natively into a TensorFlow/Keras model's computational graph."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="Prys", email="contact@reddyw.space" }
]
dependencies = [
    "tensorflow>=2.10.0",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/prysthedev/TensorImmune"
Repository = "https://github.com/prysthedev/TensorImmune.git"
Issues = "https://github.com/prysthedev/TensorImmune/issues"
Changelog = "https://github.com/prysthedev/TensorImmune/releases"